Fix gallery vertical align

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -168,6 +168,7 @@ ul {
 
 .gallery {
   li {
+    vertical-align: top;
     display: inline-block;
     width: 28ch;
   }
